--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="icon" sizes="192x192" href="icon-192x192.png" />
     <link rel="icon" sizes="512x512" href="icon-512x512.png" />
 
